Do not connect backward dependencies to listener when invalidate (#146)
* Do not connect backward dependencies to listener when invalidate

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>

* Do not connect backward dependencies to listener when invalidate - Test

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>

* Do not connect backward dependencies to listener when invalidate - Test

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>

* Do not connect backward dependencies to listener when invalidate - Test

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>

* Do not connect backward dependencies to listener when invalidate - Test

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>

* Do not connect backward dependencies to listener when invalidate - checkstyle

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>

* fix comments

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

---------

Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>
Co-authored-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>
Co-authored-by: Nicolas Rol <nicolas.rol@rte-france.com>